-Updated some of the text in landing page. -Updated styles for futures contract expiration month modal to a darker color background so is more visible.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- Free Platform -->
         <i class="fas fa-wallet"></i>
         <h3>Free</h3>
-        <p>Don't pay premium prices for basic features. TradeLab is a free alternative that covers all the essential
+        <p>Don't pay premium prices for basic features. TradeLab offers a free alternative that covers all the essential
           features you need.</p>
       </div>
   </section>
@@ -96,7 +96,7 @@
         <h3>Free, Forever.</h3>
         <div class="price">$0<span>/month</span></div>
         <ul>
-          <li><i class="fas fa-check"></i> Cloud Storage (100MB)</li>
+          <li><i class="fas fa-check"></i> **Cloud Storage (10MB)</li>
           <li><i class="fas fa-check"></i> *Option for unlimited storage</li>
           <li><i class="fas fa-check"></i> Basic analytics</li>
           <li><i class="fas fa-check"></i> Market Insights by TradingView</li>
@@ -108,6 +108,7 @@
 
     <section>
       <p class="note">*Option for unlimited storage using in browser local storage in your own device.</p>
+      <p class="note">** Learn more about storage and data management <a href="/pages/user-guide.html">here</a>.</p>
     </section>
   </section>
 
@@ -129,7 +130,7 @@
         <div class="about-item">
           <h3>Why We Do It</h3>
           <p>We understand that the biggest costs in online platforms are compute, storage, and hosting. For
-            traders, these costs are minimal - so why should you pay premium prices? We're committed to offering a free
+            traders, these costs are minimal - so why should you pay premium prices? We're committed to offering an
             alternative that covers all the essential features you need.</p>
         </div>
       </div>
