-Fixed a small issue in trade-history page where it was not saving a trade after it had been edited using the form. -Fixed issue where when importing an excel sheet would import the wrong date due to timezone issues in import page. -Fixed small styling issues with analytics page -Fixed link issue in trade-entry to redirect to correct dashboard -Changed the way trades are stored as an object and in the way the are handled by IndexedDB when storing and loading them.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h3>Free, Forever.</h3>
         <div class="price">$0<span>/month</span></div>
         <ul>
-          <li><i class="fas fa-check"></i> **Cloud Storage (10MB)</li>
+          <li><i class="fas fa-check"></i> **Cloud Storage</li>
           <li><i class="fas fa-check"></i> *Option for unlimited storage</li>
           <li><i class="fas fa-check"></i> Basic analytics</li>
           <li><i class="fas fa-check"></i> Market Insights by TradingView</li>
