--- a/pages/trade-history.html
+++ b/pages/trade-history.html
@@ -89,7 +89,7 @@
             <div id="totalPnL" class="stat-value profit">$0.00</div>
           </div>
           <div class="stat-card">
-            <h3>Average P/L</h3>
+            <h3>Average P/L (Per Trade)</h3>
             <div id="avgPnL" class="stat-value">$0.00</div>
           </div>
         </div>
