--- a/pages/analytics.html
+++ b/pages/analytics.html
@@ -82,9 +82,9 @@
           <select id="timeRange">
             <option value="7">Last 7 Days</option>
             <option value="30">Last 30 Days</option>
+            <option value="60">Last 60 Days</option>
             <option value="90">Last 90 Days</option>
-            <option value="365">Last Year</option>
-            <option value="all">All Time</option>
+            <option value="all" selected>All Time</option>
           </select>
         </div>
       </div>
@@ -152,6 +152,24 @@
           </div>
         </div>
 
+        <div class="chart-card wide avg-trade-chart">
+          <div class="chart-header">
+            <h3>Average Trade P&L</h3>
+          </div>
+          <div class="chart-container">
+            <canvas id="avgTradeChart"></canvas>
+          </div>
+        </div>
+
+        <div class="chart-card wide volume-chart">
+          <div class="chart-header">
+            <h3>Daily Volume</h3>
+          </div>
+          <div class="chart-container">
+            <canvas id="volumeChart"></canvas>
+          </div>
+        </div>
+
         <div class="chart-card win-loss-chart">
           <h3>Win/Loss Distribution</h3>
           <div class="chart-container">
@@ -171,6 +189,24 @@
             <h3>Performance By Day of Week</h3>
           </div>
           <canvas id="dayOfWeekChart"></canvas>
+        </div>
+
+        <div class="chart-card wide monthly-performance-chart">
+          <div class="chart-header">
+            <h3>Performance By Month Of Year</h3>
+          </div>
+          <div class="chart-container">
+            <canvas id="monthlyPerformanceChart"></canvas>
+          </div>
+          <div class="chart-pagination">
+            <button class="prev-btn" id="monthlyPerfPrevBtn">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+            <span class="page-indicator" id="monthlyPerfPageIndicator">1 / 2</span>
+            <button class="next-btn" id="monthlyPerfNextBtn">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
         </div>
 
         <div class="chart-card price-performance-card">
@@ -346,6 +382,10 @@
             <div class="stat-item">
               <label>Risk/Reward</label>
               <span id="riskReward">0:0</span>
+            </div>
+            <div class="stat-item">
+              <label>Average Daily Volume</label>
+              <span id="avgDailyVolume">0</span>
             </div>
           </div>
         </div>
