--- a/pages/import.html
+++ b/pages/import.html
@@ -90,9 +90,9 @@
                 <li><strong>Quantity:</strong> Number of shares/contracts</li>
               </ul>
             </div>
-            <p>Note that for brokers with multi-row entries (one row for entry and one for exit, which should include
-              most brokers), you can still import your trades, however the some data might be imported incorrectly. I am
-              working hard on an algorithm that can parse excel sheets from most brokers.</p>
+            <p>Note that for brokers with multi-row entries (one row for buy and one for sell, which should include
+              most brokers), you can still import your trades, however some data might be imported incorrectly. I am
+              working on an algorithm that can parse excel sheets from most brokers.</p>
 
             <div class="upload-section">
               <div class="file-drop-zone" id="dropZone">
@@ -139,15 +139,17 @@
           <div class="import-instructions">
             <h2>Instructions</h2>
             <ol>
-              <li>Download our Excel template or ensure your file matches the required format</li>
-              <li>Fill in your trade data following the template structure</li>
-              <li>Upload your file using the drag & drop zone or file selector</li>
+              <li>Download our Excel template or ensure your file matches the required format or import an excel sheet from your broker</li>
+              <li>If you downloaded the template, fill in your trade data following the template structure</li>
+              <li>If uploading a file, upload your file using the drag & drop zone or file selector</li>
               <li>Review the preview of your data</li>
-              <li>Click "Import Trades" to add the trades to your account</li>
+              <li>Click "Preview" to see the trades in a table</li>
+              <li>Click on each trade to expand it and see which individual transactions make up that trade</li>
+              <li>If everything looks good, click "Import Trades" to add the trades to your account</li>
             </ol>
 
             <div class="format-requirements">
-              <h3>Required Columns</h3>
+              <h3>Required Columns in Template</h3>
               <ul>
                 <li>Symbol (e.g., AAPL, EURUSD)</li>
                 <li>Trade Type (Stock, Futures, Forex, Crypto, Options)</li>
