--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -57,7 +57,7 @@
           <i class="fas fa-globe"></i>
           <span>Market Insights</span>
         </a>
-        <a href="calendar-dashboard.html" class="sidebar-link">
+        <a href="calendar-view.html" class="sidebar-link">
           <i class="fas fa-calendar-alt"></i>
           <span>Calendar</span>
         </a>
@@ -370,8 +370,8 @@
           <div class="form-group">
             <label for="editDirection">Direction:</label>
             <select id="editDirection" required>
-              <option value="long">Long</option>
-              <option value="short">Short</option>
+              <option value="Long">Long</option>
+              <option value="Short">Short</option>
             </select>
           </div>
           <div class="form-group">
