--- a/pages/calendar-dashboard.html
+++ b/pages/calendar-dashboard.html
@@ -167,6 +167,7 @@
     <script src="/scripts/dashboard.js"></script>
     <script src="/scripts/calendar-dashboard.js"></script>
     <script src="/scripts/TradeObjectHandler.js"></script>
+    <script src="/scripts/theme.js"></script>
     <!-- <script src="authCheck.js"></script> -->
 </body>
 </html>
