--- a/pages/market-insights.html
+++ b/pages/market-insights.html
@@ -21,7 +21,7 @@
             <li><a href="../index.html#pricing">Pricing</a></li>
             <li><a href="../index.html#about">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="trade-entry.html" class="cta-button">Dashboard</a></li>
+            <li><a href="calendar-dashboard.html" class="cta-button">Dashboard</a></li>
         </ul>
         <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
     </nav>
@@ -54,7 +54,7 @@
                     <i class="fas fa-globe"></i>
                     <span>Market Insights</span>
                 </a>
-                <a href=".dashboard.html" class="sidebar-link">
+                <a href="calendar-dashboard.html" class="sidebar-link">
                     <i class="fas fa-calendar-alt"></i>
                     <span>Calendar</span>
                 </a>
@@ -399,6 +399,7 @@
     </footer>
     <script src="../scripts/global.js"></script>
     <script src="../scripts/dashboard.js"></script>
+    <script src="../scripts/theme.js"></script>
 </body>
 
 </html>
