--- a/pages/settings.html
+++ b/pages/settings.html
@@ -23,7 +23,7 @@
         <li><a href="../index.html#pricing">Pricing</a></li>
         <li><a href="../index.html#about">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="trade-entry.html" class="cta-button">Dashboard</a></li>
+        <li><a href="calendar-dashboard.html" class="cta-button">Dashboard</a></li>
       </ul>
       <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
     </nav>
@@ -31,32 +31,40 @@
     <div class="dashboard-container">
       <!-- Sidebar -->
       <aside class="sidebar">
-          <div class="sidebar-header">
-              <i class="fas fa-chart-line"></i>
-              <span>Trading Tools</span>
-          </div>
-          <nav class="sidebar-nav">
-              <a href="dashboard.html" class="sidebar-link">
-                  <i class="fas fa-plus-circle"></i>
-                  <span>Manual Entry</span>
-              </a>
-              <a href="import.html" class="sidebar-link">
-                  <i class="fas fa-file-import"></i>
-                  <span>Import Trades</span>
-              </a>
-              <a href="analytics.html" class="sidebar-link">
-                  <i class="fas fa-chart-bar"></i>
-                  <span>Analytics</span>
-              </a>
-              <a href="calendar.html" class="sidebar-link">
-                  <i class="fas fa-calendar-alt"></i>
-                  <span>Calendar</span>
-              </a>
-              <a href="settings.html" class="sidebar-link active">
-                  <i class="fas fa-cog"></i>
-                  <span>Settings</span>
-              </a>
-          </nav>
+        <div class="sidebar-header">
+          <i class="fas fa-chart-line"></i>
+          <span>Trading Tools</span>
+        </div>
+        <nav class="sidebar-nav">
+          <a href="trade-entry.html" class="sidebar-link active">
+            <i class="fas fa-plus-circle"></i>
+            <span>Manual Entry</span>
+          </a>
+          <a href="import.html" class="sidebar-link">
+            <i class="fas fa-file-import"></i>
+            <span>Import Trades</span>
+          </a>
+          <a href="trade-history.html" class="sidebar-link">
+            <i class="fas fa-list"></i>
+            <span>All Trades</span>
+          </a>
+          <a href="analytics.html" class="sidebar-link">
+            <i class="fas fa-chart-bar"></i>
+            <span>Analytics</span>
+          </a>
+          <a href="market-insights.html" class="sidebar-link">
+            <i class="fas fa-globe"></i>
+            <span>Market Insights</span>
+          </a>
+          <a href="calendar-view.html" class="sidebar-link">
+            <i class="fas fa-calendar-alt"></i>
+            <span>Calendar</span>
+          </a>
+          <a href="settings.html" class="sidebar-link">
+            <i class="fas fa-cog"></i>
+            <span>Settings</span>
+          </a>
+        </nav>
       </aside>
 
     <div class="settings-container">
@@ -289,5 +297,6 @@
     <script src="../scripts/TradeObjectHandler.js"></script>
     <script src="../scripts/dashboard.js"></script>
     <script src="../scripts/settings.js"></script>
+    <script src="../scripts/theme.js"></script>
   </body>
 </html>
