-Fixed more linking issues between these pages after renaming one of the files.

--- a/pages/analytics.html
+++ b/pages/analytics.html
@@ -29,7 +29,7 @@
       <li><a href="../index.html#about">About</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li>
-        <a href="calendar-view.html" class="cta-button active">Dashboard</a>
+        <a href="calendar-dashboard.html" class="cta-button active">Dashboard</a>
       </li>
     </ul>
     <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
