--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -57,7 +57,7 @@
           <i class="fas fa-globe"></i>
           <span>Market Insights</span>
         </a>
-        <a href="calendar-dasboard.html" class="sidebar-link">
+        <a href="calendar-dashboard.html" class="sidebar-link">
           <i class="fas fa-calendar-alt"></i>
           <span>Calendar</span>
         </a>
