--- a/pages/trade-history.html
+++ b/pages/trade-history.html
@@ -24,7 +24,7 @@
         <li><a href="../index.html#pricing">Pricing</a></li>
         <li><a href="../index.html#about">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="calendar-view.html" class="cta-button active">Dashboard</a></li>
+        <li><a href="calendar-dashboard.html" class="cta-button active">Dashboard</a></li>
       </ul>
       <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
     </nav>
@@ -57,7 +57,7 @@
             <i class="fas fa-globe"></i>
             <span>Market Insights</span>
           </a>
-          <a href="dashboard.html" class="sidebar-link">
+          <a href="calendar-dashboard.html" class="sidebar-link">
             <i class="fas fa-calendar-alt"></i>
             <span>Calendar</span>
           </a>
