-Updated the functionality of the calendar-dashboard page, it now displays trades for each month properly and for each year when using year selector. It also properly changes monthly view and pnl when changing years in month view.

--- a/pages/calendar-dashboard.html
+++ b/pages/calendar-dashboard.html
@@ -74,10 +74,11 @@
                     <div class="value">$0.00</div>
                     <div class="roi">0.00%</div>
                 </div>
-                <div class="cumulative-pnl">
-                  <h2>P/L</h2>
-                  <div class="value">$0.00</div>
-                  <div class="roi">0.00%</div>
+                <div class="cumulative-pnl period-pnl">
+                    <h2 id="periodTitle">2025 P/L</h2>
+                    <div class="value">$0.00</div>
+                    <div class="roi">0.00%</div>
+                    <div class="trade-info" style="display: none">Trades: 0</div>
                 </div>
                 <div class="year-selector">
                     <button id="prevYear"><i class="fas fa-chevron-left"></i></button>
