--- a/pages/analytics.html
+++ b/pages/analytics.html
@@ -63,7 +63,7 @@
           <i class="fas fa-globe"></i>
           <span>Market Insights</span>
         </a>
-        <a href="calendar-view.html" class="sidebar-link">
+        <a href="calendar-dashboard.html" class="sidebar-link">
           <i class="fas fa-calendar-alt"></i>
           <span>Calendar</span>
         </a>
