-Fixed link issues for some of the pages. -Fixed small error in loss calculation in analytics where losses would display with a plus sign. -Updated social links in all footers to my actual social links to LinkedIn and GitHub -Fixed styling issues with calendar-dashboard so it should now display better in smaller (400ps) screens.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="/index.html" class="active index">Home</a></li>
       <li><a href="#features" class="features">Features</a></li>
       <li><a href="#pricing" class="pricing">Pricing</a></li>
-      <li><a href="#about"  class="about">About</a></li>
+      <li><a href="#about" class="about">About</a></li>
       <li><a href="/pages/contact.html">Contact</a></li>
       <li><a href="#" class="cta-button">Dashboard</a></li>
     </ul>
@@ -129,8 +129,8 @@
 
         <div class="about-item">
           <h3>Why We Do It</h3>
-          <p>We understand that the biggest costs in online platforms are compute, storage, and hosting. For
-            traders, these costs are minimal - so why should you pay premium prices? We're committed to offering an
+          <p>We understand that the biggest costs in online platforms are compute, storage, and hosting. So why should
+            you pay premium prices for basic features? We're committed to offering an
             alternative that covers all the essential features you need.</p>
         </div>
       </div>
@@ -175,8 +175,8 @@
       <div class="footer-section">
         <h3>Social</h3>
         <div class="social-links">
-          <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
-          <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
+          <a href="https://www.linkedin.com/in/obi-juan-kenobi/" target="_blank"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+          <a href="https://github.com/Obi-Juan-Kenobee" target="_blank"><i class="fab fa-github" aria-label="GitHub"></i></a>
         </div>
       </div>
     </div>
@@ -185,14 +185,14 @@
     </div>
   </footer>
   <!-- <script src="/scripts/global.js"></script> -->
-   <script src="/script/global.js"></script>
-   <script src="./scripts/authCheck.js"></script>
-   <script>
+  <script src="/script/global.js"></script>
+  <script src="./scripts/authCheck.js"></script>
+  <script>
     const index = document.querySelector(".index");
     const features = document.querySelector(".features");
     const pricing = document.querySelector(".pricing");
     const about = document.querySelector(".about");
-    const navlinks  = [index, features, pricing, about];
+    const navlinks = [index, features, pricing, about];
 
     navlinks.forEach((link) => {
       link.addEventListener("click", () => {
@@ -204,9 +204,9 @@
           });
           link.classList.add("active");
         }
-        })
-      });
-   </script>
+      })
+    });
+  </script>
   </div>
 </body>
 
