--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -24,7 +24,7 @@
       <li><a href="../index.html#pricing">Pricing</a></li>
       <li><a href="../index.html#about">About</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="calendar-view.html" class="cta-button active">Dashboard</a></li>
+      <li><a href="calendar-dashboard.html" class="cta-button active">Dashboard</a></li>
     </ul>
     <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
   </nav>
@@ -339,8 +339,8 @@
       <div class="footer-section">
         <h3>Social</h3>
         <div class="social-links">
-          <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
-          <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
+          <a href="https://www.linkedin.com/in/obi-juan-kenobi/" target="_blank"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+          <a href="https://github.com/Obi-Juan-Kenobee" target="_blank"><i class="fab fa-github" aria-label="GitHub"></i></a>
         </div>
       </div>
     </div>
