--- a/pages/trade-history.html
+++ b/pages/trade-history.html
@@ -233,8 +233,8 @@
         <div class="footer-section">
           <h3>Social</h3>
           <div class="social-links">
-            <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
-            <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
+            <a href="https://www.linkedin.com/in/obi-juan-kenobi/" target="_blank"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+            <a href="https://github.com/Obi-Juan-Kenobee" target="_blank"><i class="fab fa-github" aria-label="GitHub"></i></a>
           </div>
         </div>
       </div>
