--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,12 +16,12 @@
      <nav class="navbar">
         <div class="nav-brand"><a href="../index.html">TradeLab</a></div>
         <ul class="nav-links">
-          <li><a href="../index.html" class="active">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="../index.html#features">Features</a></li>
           <li><a href="../index.html#pricing">Pricing</a></li>
           <li><a href="../index.html#about">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="trade-entry.html" class="cta-button">Dashboard</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="calendar-dashboard.html" class="cta-button">Dashboard</a></li>
         </ul>
         <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
       </nav>
@@ -113,9 +113,8 @@
             <div class="footer-section">
                 <h3>Follow Us</h3>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
-                    <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
-                    <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
+                  <a href="https://www.linkedin.com/in/obi-juan-kenobi/" target="_blank"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+                  <a href="https://github.com/Obi-Juan-Kenobee" target="_blank"><i class="fab fa-github" aria-label="GitHub"></i></a>
                 </div>
             </div>
         </div>
@@ -126,5 +125,7 @@
 
     <script src="../scripts/global.js"></script>
     <script src="../scripts/contact.js"></script>
+    <script src="../scripts/auth.js"></script>
+    <script src="../scripts/authCheck.js"></script>
   </body>
 </html>
