--- a/pages/calendar-dashboard.html
+++ b/pages/calendar-dashboard.html
@@ -53,7 +53,7 @@
           <i class="fas fa-globe"></i>
           <span>Market Insights</span>
         </a>
-        <a href="dashboard.html" class="sidebar-link active">
+        <a href="calendar-dashboard.html" class="sidebar-link active">
           <i class="fas fa-calendar-alt"></i>
           <span>Calendar</span>
         </a>
@@ -154,9 +154,8 @@
       <div class="footer-section">
         <h3>Follow Us</h3>
         <div class="social-links">
-          <a href="#"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
-          <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
-          <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
+          <a href="https://www.linkedin.com/in/obi-juan-kenobi/" target="_blank"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+          <a href="https://github.com/Obi-Juan-Kenobee" target="_blank"><i class="fab fa-github" aria-label="GitHub"></i></a>
         </div>
       </div>
     </div>
