--- a/pages/settings.html
+++ b/pages/settings.html
@@ -23,7 +23,7 @@
         <li><a href="../index.html#pricing">Pricing</a></li>
         <li><a href="../index.html#about">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="calendar-dashboard.html" class="cta-button">Dashboard</a></li>
+        <li><a href="calendar-dashboard.html" class="cta-button active">Dashboard</a></li>
       </ul>
       <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
     </nav>
@@ -36,7 +36,7 @@
           <span>Trading Tools</span>
         </div>
         <nav class="sidebar-nav">
-          <a href="trade-entry.html" class="sidebar-link active">
+          <a href="trade-entry.html" class="sidebar-link">
             <i class="fas fa-plus-circle"></i>
             <span>Manual Entry</span>
           </a>
@@ -60,7 +60,7 @@
             <i class="fas fa-calendar-alt"></i>
             <span>Calendar</span>
           </a>
-          <a href="settings.html" class="sidebar-link">
+          <a href="settings.html" class="sidebar-link active">
             <i class="fas fa-cog"></i>
             <span>Settings</span>
           </a>
@@ -280,11 +280,8 @@
         <div class="footer-section">
           <h3>Follow Us</h3>
           <div class="social-links">
-            <a href="#"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
-            <a href="#"
-              ><i class="fab fa-linkedin" aria-label="LinkedIn"></i
-            ></a>
-            <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
+            <a href="https://www.linkedin.com/in/obi-juan-kenobi/" target="_blank"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+            <a href="https://github.com/Obi-Juan-Kenobee" target="_blank"><i class="fab fa-github" aria-label="GitHub"></i></a>
           </div>
         </div>
       </div>
