--- a/pages/terms-of-use.html
+++ b/pages/terms-of-use.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
       <div class="nav-brand"><a href="../index.html">TradeLab</a></div>
       <ul class="nav-links">
-        <li><a href="../index.html" class="active">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../index.html#features">Features</a></li>
         <li><a href="../index.html#pricing">Pricing</a></li>
         <li><a href="../index.html#about">About</a></li>
@@ -2712,11 +2712,8 @@
         <div class="footer-section">
           <h3>Follow Us</h3>
           <div class="social-links">
-            <a href="#"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
-            <a href="#"
-              ><i class="fab fa-linkedin" aria-label="LinkedIn"></i
-            ></a>
-            <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
+            <a href="https://www.linkedin.com/in/obi-juan-kenobi/" target="_blank"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+            <a href="https://github.com/Obi-Juan-Kenobee" target="_blank"><i class="fab fa-github" aria-label="GitHub"></i></a>
           </div>
         </div>
       </div>
@@ -2725,5 +2722,7 @@
       </div>
     </footer>
     <script src="/scripts/global.js"></script>
+    <script src="/scripts/authCheck.js"></script>
+    <script src="/scripts/auth.js"></script>
   </body>
 </html>
