--- a/pages/user-guide.html
+++ b/pages/user-guide.html
@@ -115,11 +115,15 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3><a href="../index.html">TradeLab</a></h3>
-          <p>Your personal trading journal to track and analyze your trading performance.</p>
+          <p>
+            Your personal trading journal to track and analyze your trading
+            performance.
+          </p>
         </div>
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../index.html#features">Features</a></li>
             <li><a href="../index.html#pricing">Pricing</a></li>
             <li><a href="../index.html#about">About</a></li>
@@ -130,17 +134,26 @@
         <div class="footer-section">
           <h3>Legal</h3>
           <ul>
+            <li><a href="terms-of-use.html">Terms of Service</a></li>
             <li><a href="privacy.html">Privacy Policy</a></li>
-            <li><a href="terms-of-use.html">Terms of Use</a></li>
             <li><a href="risk-disclosure.html">Risk Disclosure</a></li>
           </ul>
         </div>
+        <div class="footer-section">
+          <h3>Follow Us</h3>
+          <div class="social-links">
+            <a href="https://www.linkedin.com/in/obi-juan-kenobi/" target="_blank"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+            <a href="https://github.com/Obi-Juan-Kenobee" target="_blank"><i class="fab fa-github" aria-label="GitHub"></i></a>
+          </div>
+        </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 TradeLab. All rights reserved.</p>
+        <p>&copy; 2024 TradeLab. All rights reserved.</p>
       </div>
     </footer>
 
     <script src="../scripts/global.js"></script>
+    <script src="../scripts/authCheck.js"></script>
+    <script src="../scripts/auth.js"></script>
   </body>
 </html>
