-Updated privacy policy, terms of use and user-guide with more thorough details. -Fixed issue in the footer  where social links would not align properly on larger (2k) displays.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <section>
       <p class="note">*Option for unlimited storage using in browser local storage in your own device.</p>
-      <p class="note">** Learn more about storage and data management <a href="/pages/user-guide.html">here</a>.</p>
+      <p class="note">** Learn more about storage and data management <a href="/pages/user-guide.html#about-storage">here</a>.</p>
     </section>
   </section>
 
