--- a/pages/risk-disclosure.html
+++ b/pages/risk-disclosure.html
@@ -31,23 +31,21 @@
       <ol>
         <li>
           <b class="sub-titles sub-titles-update"
-            >Risk Disclaimer (For users engaged in trading activities through
-            TraderSync or its affiliates):</b
+            >Risk Disclaimer:</b
           ><br />
-          Trading futures and forex involves significant risks and may not be
-          suitable for all investors. Investors may lose all or more than their
-          initial investment. Risk capital refers to funds that can be lost
-          without impacting one’s financial security or lifestyle. Only risk
-          capital should be used for trading, and only individuals with
-          sufficient risk capital should consider trading. Past performance does
-          not guarantee future results.
+          Trading futures, forex, and any other products involves significant
+          risks and may not be suitable for all investors. Investors may lose
+          all or more than their initial investment. Risk capital refers to funds
+          that can be lost without impacting one’s financial security or
+          lifestyle. Only risk capital should be used for trading, and only
+          individuals with sufficient risk capital should consider trading. Past
+          performance does not guarantee future results.
         </li>
         <li>
           <b class="sub-titles sub-titles-update">Testimonial Notice:</b><br />
-          Testimonials featured on this platform (from other
-          vendors/software/products) may not reflect the experiences of all
-          clients or customers and do not guarantee future performance or
-          success.
+          Any testimonials, if any, featured on this platform may not reflect the
+          experiences of all clients or customers and do not guarantee future
+          performance or success.
         </li>
         <li>
           <b class="sub-titles sub-titles-update"
