--- a/pages/user-guide.html
+++ b/pages/user-guide.html
@@ -615,6 +615,116 @@
             <div class="note">
               <p><strong>Note:</strong> Market data is provided through TradingView integration. All information is updated in real-time, but slight delays may occur depending on your internet connection. Use this information as part of your broader market analysis strategy.</p>
             </div>
+
+            <div>
+              <h2>Market Insights and Chart Analysis</h2>
+              <div>
+                <h3>TradingView Integration</h3>
+                <p>
+                  TradeLab integrates TradingView's powerful charting widgets throughout
+                  our platform to provide you with professional-grade market analysis
+                  tools. Here's what you need to know about our TradingView
+                  integration:
+                </p>
+
+                <h4>What We Use</h4>
+                <ul>
+                  <li>
+                    <strong>Advanced Charts:</strong> Interactive charting widgets on
+                    trade detail pages and market analysis sections for detailed
+                    technical analysis
+                  </li>
+                  <li>
+                    <strong>Mini Charts:</strong> Lightweight chart widgets in the
+                    dashboard and watchlist for quick market overview
+                  </li>
+                  <li>
+                    <strong>Market Overview:</strong> Market screeners and technical
+                    analysis widgets to help identify trading opportunities
+                  </li>
+                </ul>
+
+                <h4>Why We Chose TradingView</h4>
+                <ul>
+                  <li>
+                    <strong>Industry Standard:</strong> TradingView is recognized
+                    globally for providing reliable and professional-grade charting
+                    tools
+                  </li>
+                  <li>
+                    <strong>Rich Features:</strong> Access to advanced technical
+                    indicators, drawing tools, and multiple timeframes
+                  </li>
+                  <li>
+                    <strong>Real-time Data:</strong> Accurate and timely market data
+                    across multiple assets and exchanges
+                  </li>
+                  <li>
+                    <strong>User Experience:</strong> Intuitive interface that works
+                    seamlessly across desktop and mobile devices
+                  </li>
+                </ul>
+
+                <h4>Important Disclaimers</h4>
+                <ul>
+                  <li>
+                    TradeLab is not affiliated with TradingView. We use their widgets
+                    as an independent platform to enhance your trading experience.
+                  </li>
+                  <li>
+                    We do not share any of your personal information or trading data
+                    with TradingView.
+                  </li>
+                  <li>
+                    When interacting with TradingView widgets, you are subject to
+                    TradingView's terms of service and privacy policy.
+                  </li>
+                  <li>
+                    Chart data and technical analysis tools are provided as-is by
+                    TradingView. While we strive to ensure reliable service, we cannot
+                    guarantee the accuracy or availability of these features.
+                  </li>
+                </ul>
+
+                <h4>Using TradingView Charts in TradeLab</h4>
+                <ol>
+                  <li>
+                    <strong>Dashboard Charts:</strong> Quick-view charts show key
+                    markets at a glance. Click any chart to expand for detailed
+                    analysis.
+                  </li>
+                  <li>
+                    <strong>Trade Analysis:</strong> Each trade entry includes a
+                    detailed chart where you can:
+                    <ul>
+                      <li>Add technical indicators</li>
+                      <li>Draw trend lines and patterns</li>
+                      <li>Save chart layouts for future reference</li>
+                      <li>Take chart screenshots for your trade journal</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <strong>Market Research:</strong> Use the market overview section
+                    to:
+                    <ul>
+                      <li>Screen for trading opportunities</li>
+                      <li>Monitor multiple markets simultaneously</li>
+                      <li>Track technical signals across timeframes</li>
+                    </ul>
+                  </li>
+                </ol>
+
+                <div class="note">
+                  <p>
+                    <strong>Note:</strong> While TradingView widgets are a core
+                    feature of our platform, TradeLab's trade journaling, analysis,
+                    and portfolio management features operate independently. Your
+                    trading data and personal information remain exclusively within
+                    TradeLab's secure environment.
+                  </p>
+                </div>
+              </div>
+            </div>
           </section>
 
           <section id="settings" class="guide-section">
