--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -31,9 +31,9 @@
         <div class="legal-container">
             <h1>Privacy Policy</h1>
             <p>Last updated: 1/04/2024</p>
-                <p>In brief: We are TraderSync (“TraderSync,” “we” or “us”). We respect your privacy and work hard to
-                    protect the confidentiality of information that you give us. We will share your personal data with
-                    third parties only in the event that it's needed for the provision of services and data you have
+                <p>In brief: We are TradeLab (“TradeLab,” “we” or “us”). We respect your privacy and work hard to
+                    protect the confidentiality of information that you give us. We will NOT share your personal data with
+                    third parties unless that it is explicitly requested by you and it's needed for the provision of services and data you have
                     requested (explained in detail in this privacy policy).</p>
                 <h3>Updates</h3>
                 <p>We may update this privacy policy at our discretion from time to time by posting a new version on our
@@ -47,46 +47,21 @@
                             <li>Email</li>
                             <li>Username</li>
                             <li>First name</li>
-                            <li>Avatar *<em>Optional</em></li>
                         </ol>
                     </li>
                     <li>Orders: When you make a purchase or attempt to make a purchase through the Site, we collect
                         certain information from you, including your full name, billing address, payment information
                         (including credit card numbers, email address, and phone number).This information is collected
                         by our payment processor and solely kept for billing purposes.</li>
-                    <li>Contact Data: We might process any personal data you provide us when communicating with us via
-                        email, live chat or phone for the purpose of better assistant you.</li>
+                    <li>Contact Data: We might process certain data you provide us when communicating with us via
+                        email such as Operating System, Browser, and Device type for the purpose of fixing potential issues with the platform.</li>
                     <li>Cookies and other technologies: Correspond to data files that are placed on your browser and
                         often include anonymous unique identifiers.</li>
-                    <li>Log Files: Correspond to user actions upon interacting with the website or mobile app. This is
-                        used to understand how users use the product for us to better the services or to assist a user
-                        with any issues encounter.</li>
-                    <li>Device Information: We collect the following information about the devices you use to interact
-                        with our services: IP address of the device (from which we can also infer the country you are
-                        connecting from), operating system, and browser version. We collect this information to prevent
-                        spam and abuse of our services. IP addresses may be considered personal data in certain
-                        jurisdictions, and will be treated in accordance with this privacy policy.</li>
-                    <li>Analytics: When you are using our Website, mobile and desktop applications, or widgets we
-                        provide to another site, we may collect analytics information automatically. This information
-                        may include your general device information, device identifiers (for example, Google Advertising
-                        ID, if you are using an Android device, or Advertising Identifier (IDFA), if you are using an
-                        iOS device), network information, website, and application interaction events. We collect
-                        pseudonymous data only and this analytic information does not include any personal identifiable
-                        information from your profile. We use this information to analyze and improve the work of our
-                        services and applications, and to develop, test, and improve our service further. For this
-                        purpose, we may use internal analytic as well as third party service providers. For further
-                        details about our use of third-party service providers, please refer to the Analytics providers
-                        section below.</li>
                 </ol>
                 <h2>How do we use your personal information?</h2>
                 <p>We will process your personal data as necessary for certain legitimate business interest, which
                     include the following:</p>
                 <h3>Profile</h3>
-                <p>Correspond to the set of information for each individual product usage preference. User settings
-                    (such but not limited to charts, privacy, portfolio, reports, trade grouping, fees, spreads, widgets
-                    and more). This information is kept solely for the purpose of customizing the user’s experience when
-                    using the website, applications, or user account. We do not share private settings with any third
-                    party.</p>
                 <p>User account and profile operations<br>
                     We use your contact details, such as username, email address, first name, in the following ways:</p>
                 <ul>
@@ -94,22 +69,14 @@
                         and to prevent spam, fraud, and abuse;</li>
                     <li>to acknowledge, confirm, and deal with your user account;</li>
                     <li>to send all new users a welcome activation email to verify their email address;</li>
-                    <li>(For Paid Users) to provide you with subscription services and contact you regarding your use of
-                        such services. This is necessary for us to implement your requests; and</li>
-                    <li>Paid Users will also receive a notification email from Stripe if there are any issues regarding
-                        billing their cards for auto-renew subscriptions. Users cannot opt out of these messages, though
-                        they can delete their account.</li>
                 </ul>
                 <h3>User account deleting</h3>
                 <p>You may refuse to use our Website and/or application and may ask us to delete your account in the
                     Profile settings. Your account will be deleted immediately together with any subsequent personal
                     data you have supplied to us or we have collected. This action is irreversible.</p>
-                <p>Backups from our system might have partial chunks of your personal data. These chunks will be delete
-                    automatically 30 days after the deletion took place.</p>
                 <h3>Customer Service</h3>
-                <p>When you contact our customer service team, we might use the data that we have collected from you,
-                    together with any extra information you might have provided to customer service to properly solve
-                    any issues you might encounter.</p>
+                <p>When you contact us for support,we may process the data that you might have provided us to properly solve any
+                    issues you might encounter.</p>
                 <h3>API</h3>
                 <p>If you are using our API (Application Programming Interface) services (such importing trades,
                     exporting reports), then we may process your personal data in order to provide and support those
@@ -117,26 +84,10 @@
                 <h2>When would we share personal information</h2>
                 <p>We share your personal data with third parties in the following situations:</p>
                 <ul>
-                    <li>Payment Information: Pais Users must provide payment information (name, payment card
+                    <!-- <li>Payment Information: Any transfer of money, we must provide payment information (name, payment card
                         information, full address and phone number). This information is used for billing purposes and
-                        only processed by our payment processor.</li>
-                    <li>TraderSync affiliated business: We share the unique anonyms id of the transaction to track
-                        referrals.</li>
-                    <li>Analytics providers: We might use third party services provider to monitor and analyze the use
-                        of our services and mobile applications.
+                        only processed by our payment processor.</li> -->
                         <ul>
-                            <li>Google Analytics: We might use Google Analyticson the website and in conjunction with
-                                the widgets we provide. For more information on Google Analytics privacy practices, you
-                                can check&nbsp;<a
-                                    href="https://support.google.com/analytics/answer/6004245?hl=en&amp;ref_topic=2919631">here</a>.
-                            </li>
-                            <li>Analytics services for mobile application that we might use:
-                                <ul>
-                                    <li>Firebase: a development and analytical platform provided by Google. For more
-                                        information on what type of information is collected, please visit the&nbsp;<a
-                                            href="https://policies.google.com/privacy">Google Privacy web page</a>.</li>
-                                </ul>
-                            </li>
                             <li>Business transfer: If we sell our business or our company assets are acquired by a third
                                 party, personal data held by us about our general account users, subscription account
                                 users or customer may be one of the transferred assets.</li>
@@ -146,57 +97,32 @@
                                 contract terms that you are subject to, or to protect us or our contractors against loss
                                 or damage. This may include, but is not limited to, exchanging information with the
                                 police, courts or law enforcement organizations.</li>
-                            <li>Advertising: We might use remarketing and tracking features. Remarketing allows us to
-                                display advertising in a more targeted manner in order to present advertisement of
-                                interest to users, based on their activity on other websites. Tracking features allows
-                                us to collect information about ad click and impressions and certain actions upon users
-                                interacting with our website and mobile application. We might use the following services
-                                for advertising, remarketing and tracking:
-                                <ul>
-                                    <li>Google Ads: Help serve and measure targeted ads to people looking for similar
-                                        services as what we provide.</li>
-                                    <li>Facebook Pixel: Help serve and measure ads and build audiences for our
-                                        advertising campaigns.</li>
-                                    <li>Adroll:Help serve and measure ads and build audiences for our advertising
-                                        campaigns.</li>
-                                    <li>Bings Ads: Help serve and measure targeted ads to people looking for similar
-                                        services as what we provide.</li>
-                                </ul>
-                            </li>
                         </ul>
                     </li>
                 </ul>
-                <p>Note that we do not share any personal information with our advertisers. They can only access
-                    statistics that include the amount of impressions and clicks their ads have generated.</p>
                 <h2>Public information on our site</h2>
                 <h3>Public Profile</h3>
                 <p>Upon creating an account with us, all your information by default is set to private. Meaning no one
                     else have access to view your information. You can decide to share trade(s) with the public if you
-                    wish. Upon doing so, anyone could access the trade(s) you decide to share.</p>
-                <p>You are in control to decide which data points if any, you would like to share. For example, you can
-                    decide to share your profit and loss or just your return %. You can control this under your privacy
-                    settings.</p>
+                    wish. By doing so, you are responsible for what you share.</p>
                 <h3>Public Content</h3>
-                <p>Our services allow those with registered user account to share trades with the rest of the internet
-                    via our sharing feature.</p>
-                <p>By using our sharing features, you grant irrevocable, perpetual, and royalty free license to publish
-                    and disclose the content, as well as the username of the author, which makes you identifiable.</p>
+                <p>There is no public content on our site. Every profile is private by default and no one other than
+                    you, the user, can view your profile.</p>
                 <h2>Security of personal data</h2>
-                <p>We use technical and organization procedures to protect your personal data and required third party
-                    with who we work to do the dame.</p>
+                <p>We use technical procedures to protect your personal data.</p>
                 <p>We use Transport Layer Security (TLS) encryption technology in order to protect certain information
                     that you submit to us. This technology protects you from having your information intercepted by
-                    anyone while it is being transmitted to TraderSync or payment processor. While on a secure page,
-                    such as our order form, the “lock” icon in the browser window is displayed, confirming that a secure
-                    and encrypted connection has been established with the Website. We work hard to ensure that our
-                    Service is secure and that we meet industry standards. We also use other safeguards, such as
-                    firewalls, authentication systems (i.e. passwords, and personal identification numbers), and access
-                    control mechanisms to control unauthorized access to systems and data. If you have chosen to create
-                    an account, you are responsible for doing everything you reasonably can to keep your access details
-                    secret. You must not share these details with anyone else.</p>
+                    anyone while it is being transmitted to TradeLab. While on a secure page, the “lock” icon in the
+                    browser window is displayed, confirming that a secure and encrypted connection has been established
+                    with the Website. We work hard to ensure that our Service is secure and that we meet industry
+                    standards. We also use other safeguards, such as firewalls, authentication systems (i.e. passwords,
+                    and personal identification numbers), and access control mechanisms to control unauthorized access to
+                    systems and data. If you have chosen to create an account, you are responsible for doing everything
+                    you reasonably can to keep your access details secret. You must not share these details with anyone
+                    else.</p>
                 <p>We also do our best to protect user information offline. All of our users’ personal information is
-                    restricted to our offices. Only employees who need to see the information to perform their jobs are
-                    allowed to access it.</p>
+                    restricted to our offices. This information is only accessed in order to provide our services or to 
+                provide technical support.</p>
                 <p>The servers that store personal data are located in a secure environment in a locked facility.</p>
                 <p>We are constantly improving the ways we secure, store, and process the data we collect, including the
                     addition of physical security measures that help us counter unauthorized access to our systems.
@@ -205,10 +131,43 @@
                 <h2>Children and sensitive personal data</h2>
                 <p>This website and mobile apps are not directed to children under the age of 18. We do not knowingly
                     contact or collect personal information from children below age of 18.</p>
+                <h2>Third-Party Services and Integrations</h2>
+                <div>
+                  <h3>TradingView Integration</h3>
+                  <p>
+                    Our platform integrates TradingView widgets to provide chart
+                    visualization and market data features. We want to be clear about
+                    our relationship with TradingView:
+                  </p>
+                  <ul>
+                    <li>
+                      TradeLab and TradingView are separate entities. We are not
+                      affiliated with, endorsed by, or officially connected with
+                      TradingView in any way.
+                    </li>
+                    <li>
+                      We do not share any personal information, user data, or trading
+                      information with TradingView.
+                    </li>
+                    <li>
+                      The TradingView widgets are embedded in our platform solely as a
+                      feature for our users' convenience.
+                    </li>
+                    <li>
+                      When you interact with TradingView widgets, you may be subject
+                      to TradingView's own privacy policy and terms of service.
+                    </li>
+                    <li>
+                      We recommend reviewing TradingView's privacy policy to
+                      understand how they may collect and use data through their
+                      widgets.
+                    </li>
+                  </ul>
+                </div>
                 <h2>Contact us</h2>
                 <p>For more information about our privacy policy practice, if you have any questions, or if you would
-                    like to make a complaint, please contact us by <a
-                        href="mailto:info@tradersync.com">info@tradersync.com</a></p>
+                    like to make a complaint, please contact us by visiting our <a href="../contact-us.html">Contact
+                        Us</a> page or by sending an email to <a href="mailto:info@tradelab.net">info@tradelab.net</a></p>
         </div>
 </div>
         <!-- Footer -->
